--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,22 +3,43 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+    align-items: flex-start;
   }
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-end;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-body {
+  background-color: #a1b9e9;
+  min-height: 85vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-footer {
+  background-color: #000000;
+  min-height: 15vh;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -26,6 +47,17 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.AppNavbar-navbar {
+  background-color: #282c34;
+  max-height: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-end;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 @keyframes App-logo-spin {
