--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,6 +62,15 @@
   color: white;
 }
 
+#loadingDiv{
+  /* align-items: center; */
+  /* justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
 .App-footer {
   background-color: #B8EE30;
   min-height: 15vh;
