--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@
 }
 
 #carouselCard {
-  background-color: #F9D030;
+  background-color: #B4C5B6;
   min-height: max-content;
 }
 
@@ -35,6 +35,11 @@
   height: auto;
   max-height: 800px;
   
+}
+
+#caption {
+  background-color: black;
+  opacity: 60%;
 }
 
 #imageUploader{
@@ -53,7 +58,7 @@
 }
 
 .mainContainer {
-  background-color: #F62AA0;
+  background-color: #10564F;
   min-height: 68vh;
   display: flex;  
   flex-direction: column;
@@ -72,7 +77,7 @@
 }
 
 .App-footer {
-  background-color: #B8EE30;
+  background-color: #3F98AF;
   min-height: 15vh;
   display: flex;
   flex-direction: row;
@@ -87,7 +92,7 @@
 }
 
 #AppNavbar-navbar {
-  background-color: #B8EE30;
+  background-color: #3F98AF;
   max-height: fit-content;
   display: flex;
   flex-direction: row;
